--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
-spring.datasource.url=jdbc:sqlserver://boot2docker;databaseName=marktmonitor-web
-spring.datasource.username=sa
-spring.datasource.password=reallyStrongPwd123
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.jpa.show-sql=false
+local.spring.datasource.url=jdbc:sqlserver://boot2docker;databaseName=marktmonitor-web
+local.spring.datasource.username=sa
+local.spring.datasource.password=reallyStrongPwd123
+local.spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+local.spring.jpa.show-sql=false
+
+spring.datasource.url=${local.spring.datasource.url};databaseName=marktmonitor-web
+spring.datasource.username=${local.spring.datasource.username}
+spring.datasource.password=${local.spring.datasource.password}
+spring.datasource.driverClassName=${local.spring.datasource.driverClassName}
+spring.jpa.show-sql=${local.spring.jpa.show-sql}
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
