fix for application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ local.spring.datasource.password=reallyStrongPwd123
 local.spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 local.spring.jpa.show-sql=false
 
-spring.datasource.url=${local.spring.datasource.url};databaseName=marktmonitor-web
+spring.datasource.url=${local.spring.datasource.url}
 spring.datasource.username=${local.spring.datasource.username}
 spring.datasource.password=${local.spring.datasource.password}
 spring.datasource.driverClassName=${local.spring.datasource.driverClassName}
