--- a/wercker.yml
+++ b/wercker.yml
@@ -19,7 +19,7 @@ build-sk-dbi-be:
         name: copy artifacts for docker creation
         code: |
           mkdir -p $WERCKER_OUTPUT_DIR/resources/.
-          cp -r target/sk-dbi-be.jar $WERCKER_OUTPUT_DIR/resources/.
+          cp -r target/skillskompas-0.0.1-SNAPSHOT.jar $WERCKER_OUTPUT_DIR/resources/.
           cp version.txt Dockerfile $WERCKER_OUTPUT_DIR/.
     - sharpershape/cache:
         name: "Store dependencies to cache"
