--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.5.BUILD-SNAPSHOT</version>
+		<version>2.1.4.RELEASE</version>
 		<relativePath/> <!-- lookup parent from databaseconnector.skillskompas.controller.repository -->
 	</parent>
 <!--		<groupId>database-connector</groupId>-->
