--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-local.spring.datasource.url=jdbc:sqlserver://boot2docker;databaseName=marktmonitor-web
-local.spring.datasource.username=sa
-local.spring.datasource.password=reallyStrongPwd123
+local.spring.datasource.url=jdbc:sqlserver://mm-acc.cqz2vfffczle.eu-central-1.rds.amazonaws.com
+local.spring.datasource.username=marktmonitor-web
+local.spring.datasource.password=0281yrdibx91
 local.spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 local.spring.jpa.show-sql=false
 
